# RBVMS-CSEminor-Clone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile.bash
cases/karman_re100/: run  von-karman-nurbs.mesh  von-karman-tet.geo
cases/lid-driven-cavity/: README.md  lid-driven-cavity.c  run-nurbs
cases/naca-foil/: README.md  naca-foil.c  naca-foil.mesh  run-nurbs
cases/poiseuille/: README.md  poiseuille.c  poiseuille.mesh  run-nurbs
cases/von-karman-re100/: ClCd.gp  README.md  postpro.py  run-nurbs  run-tri  von-karman-tet.geo  von-karman.c
config/: FindMETIS.cmake  FindMFEM.cmake  SetUpThirdParty.cmake  buildInfo.sh  style.sh
config/image/: apptainer.md  numship.def  rbvms.def
examples/: CMakeLists.txt  ldc.c  vkvs.c
misc/: rbvms.def
rbvms/: CMakeLists.txt  coefficients.cpp  coefficients.hpp  evolution.cpp  evolution.hpp  monitor.cpp  monitor.hpp  noInfo.hpp  precon.cpp  precon.hpp  printInfo.cpp  rbvms.cpp  tau.cpp  tau.hpp  weakform.cpp  weakform.hpp
src/: CMakeLists.txt  monitor.cpp  tau.cpp
